hphp/hack/test/typecheck/instanceof_static_with_reqs.php.exp
object
<static> as this as BaseField<T>
INeedsFoo<^[unresolved]>
^(INeedsFoo<^(_)> | <static> as this as BaseField<T>)
File "instanceof_static_with_reqs.php", line 31, characters 12-17:
Invalid return type (Typing[4110])
File "instanceof_static_with_reqs.php", line 7, characters 49-52:
This is the expression dependent type <static>
File "instanceof_static_with_reqs.php", line 7, characters 49-52:
  where '<static>' refers to the late bound type of the enclosing class
File "instanceof_static_with_reqs.php", line 23, characters 27-35:
It is incompatible with an object of type INeedsFoo
